@startuml
'https://plantuml.com/class-diagram


database MySQL{
    entity User {
        id : String
        name : String
        userId : String
        userPw : String
        phoneNumber : String
        custStatus : String
        createdAt : LocalDateTime
        updatedAt : LocalDateTime
    }

    entity Group {
        id : String
        name : String
        description : String
        createdAt : LocalDateTime
        updatedAt : LocalDateTime
    }

    entity Coupon {
        id : String
        (company) : String
        (menuName) : String
        (amount) : Long
        (barcode) : String
        (dueDate) : LocalDateTime
        imagePath : String
        isUsed : boolean
        createdBy : String
        createdAt : LocalDateTime
        ownBy : String
        ownAt : LocalDateTime
        usedBy : String
        usedAt : LocalDateTime
    }

    entity UserAndGroup {
        id : String
        userId : String
        groupId : String
    }

    entity GroupAndCoupon {
        id : String
        groupId : String
        couponId : String
    }

    entity UserAndCoupon {
        id : String
        userId : String
        couponId : String
        status : String
    }
}

Group ||--o{ GroupAndCoupon : id = groupId
Coupon ||--o{ GroupAndCoupon : id = couponId
User ||--o{ UserAndGroup : id = userId
Group ||--o{ UserAndGroup : id = groupId

User ||--|{ UserAndCoupon : id = userId
Coupon ||--|{ UserAndCoupon : id = groupId


@enduml